# ChangeLog for dev-python/beautifulsoup
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/ChangeLog,v 1.62 2012/04/21 22:17:45 floppym Exp $

  21 Apr 2012; Mike Gilbert <floppym@gentoo.org> beautifulsoup-4.0.4.ebuild:
  Simplify docs building.

  21 Apr 2012; Mike Gilbert <floppym@gentoo.org> metadata.xml:
  Add remote-id.

*beautifulsoup-4.0.4 (21 Apr 2012)

  21 Apr 2012; Mike Gilbert <floppym@gentoo.org> +beautifulsoup-4.0.4.ebuild:
  Version bump. Ebuild rewrite with help from Ian Delaney.

*beautifulsoup-3.2.1 (02 Mar 2012)

  02 Mar 2012; Dirkjan Ochtman <djc@gentoo.org> +beautifulsoup-3.2.1.ebuild:
  Version bump to 3.2.1.

  21 Feb 2012; Patrick Lauer <patrick@gentoo.org>
  beautifulsoup-3.1.0.1-r1.ebuild, beautifulsoup-3.2.0.ebuild:
  Restricting jython

  09 Feb 2012; Matt Turner <mattst88@gentoo.org> beautifulsoup-3.2.0.ebuild:
  Added ~mips, bug 393181.

  08 Feb 2012; Fabian Groffen <grobian@gentoo.org> beautifulsoup-3.2.0.ebuild:
  Marked ~x64-macos, bug #399637

  04 Sep 2011; Fabian Groffen <grobian@gentoo.org>
  beautifulsoup-3.2.0.ebuild:
  Marked ~sparc-solaris

  28 Jul 2011; Jesus Rivero <neurogeek@gentoo.org>
  beautifulsoup-3.1.0.1-r1.ebuild, beautifulsoup-3.2.0.ebuild:
  Changed license to BSD

  30 Mar 2011; Jeremy Olexa <darkside@gentoo.org>
  beautifulsoup-3.2.0.ebuild:
  align prefix keywords

  22 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -beautifulsoup-3.0.8.1.ebuild:
  Delete.

  21 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org>
  beautifulsoup-3.1.0.1-r1.ebuild, beautifulsoup-3.2.0.ebuild:
  ppc/ppc64 stable wrt #352735

  13 Feb 2011; Raúl Porcel <armin76@gentoo.org> beautifulsoup-3.2.0.ebuild:
  alpha/ia64/sparc stable wrt #352735

  30 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  beautifulsoup-3.1.0.1-r1.ebuild, beautifulsoup-3.2.0.ebuild:
  x86 stable wrt bug #352735
