@@ -9,13 +9,13 @@ DIST beautifulsoup4-4.0.4.tar.gz 120837 RMD160 6822516b48b3ab57fb08b2bd1f8a923b7
 EBUILD beautifulsoup-3.1.0.1-r1.ebuild 1312 RMD160 46724184c0c1ed13d5722c295d079ef8f1219fd1 SHA1 983dd5fae0cae1fe34a2001f336aa282e3b0a3c6 SHA256 298fb2dc404a10f835836a9d759b59cef2357d0a9706bfd8f05d97af57ddef23
 EBUILD beautifulsoup-3.2.0.ebuild 1119 RMD160 0dbba2971685e3c32a81d6b5cf36216f5103b388 SHA1 910d0cbf32e0e05bed917c113092a99916649949 SHA256 d2af3da54747921963a468a377e23aa15756bc41fcd3b300e8cc7ec2c72f636a
 EBUILD beautifulsoup-3.2.1.ebuild 1122 RMD160 852c7ad084709304d63c6f08d90d359c81b509e9 SHA1 e0f782db4c9248479b57cd0db9b0396be1ef5fb6 SHA256 905ea201c8e2470305ea15ac4395d29f3c310684917cbcf4fcf8d8e906140857
-EBUILD beautifulsoup-4.0.4.ebuild 1335 RMD160 0b76983b79ffe179fe0bcc0287fce69087246cc6 SHA1 9e8e5bfbe941f08d7187e5a2437814c49b6457b7 SHA256 492e1ebd98e9e0ee755dca2a2765c79f897a6ce6830cd791ed3bbe0263fa102f
-MISC ChangeLog 8436 RMD160 1d224558285357127ae0a80fce5f7f6f5a5a71f5 SHA1 f42f2c183a8e5aa285e1285f5e664eb53670eae9 SHA256 5fb4f23e4ce31f6a0c8d38c0ffa5075328141d7c174807d72eec1351a559285f
+EBUILD beautifulsoup-4.0.4.ebuild 1362 RMD160 c792ecd49d496d7f696ec82c9a964f9e8e3cf8e4 SHA1 7c70b61f976c56c630eed2bcd0356eb0f61f7a57 SHA256 ca8652807ae4645a28beb462bc19df29480767b0dc87e26d0588a556ac428eb1
+MISC ChangeLog 8580 RMD160 828696850489c944ffe9722d41f48ad825be6323 SHA1 5a774e52b46d7bef58f6b8f9e4c8253f1bf124ed SHA256 8291ff3a7b8a649761588065696a841dd7b85f788732ec7a3b9ae8ee6dec89ff
 MISC metadata.xml 640 RMD160 afa0925fcb68fd3c98169da4966f7a97fcb66e1a SHA1 99eff512674d18dfca330c0b9d1d080dec63c19b SHA256 c24a9868c6b553732e13ee16e41586d8003da55cbdde41d684e4260108f6da51
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk+TMg8ACgkQC77qH+pIQ6SyGwD9GYhndIw6awdvUQwAWd5NEKnG
-kI/1+OPb5bv8INK9WB0BAMTIt5ejDNBpJ1rw2EKcohMJWnsk5SnIZL3p5qUwD0Rv
-=Zg8+
+iF4EAREIAAYFAk+US/wACgkQC77qH+pIQ6QHgQD9FcX7qbkKqpXKBP1PJn1cv/Ac
+/QozzIn/qmNGdYhQixsBAJ9w8Uf24FLpCrfV4stEXGoxv1hO10oMdAntX+5sKqcp
+=0FjF
 -----END PGP SIGNATURE-----
