@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/beautifulsoup-4.0.4.ebuild,v 1.2 2012/04/21 22:17:45 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/beautifulsoup-4.0.4.ebuild,v 1.3 2012/04/22 18:20:38 floppym Exp $
 
 EAPI="4"
 
@@ -22,9 +22,10 @@ SRC_URI="mirror://pypi/${MY_P:0:1}/${MY_PN}/${MY_P}.tar.gz"
 LICENSE="MIT"
 SLOT="4"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~x64-macos ~x86-macos ~sparc-solaris ~x86-solaris"
-IUSE="doc"
+IUSE="doc test"
 
-DEPEND="doc? ( dev-python/sphinx )"
+DEPEND="doc? ( dev-python/sphinx )
+	test? ( dev-python/lxml )"
 RDEPEND=""
 
 PYTHON_MODNAME="bs4"
@@ -39,7 +40,7 @@ src_compile() {
 
 src_test() {
 	testing() {
-		cd "${S}/build-${PYTHON_ABI}/lib"
+		cd "build-${PYTHON_ABI}/lib"
 		nosetests --verbosity="${PYTHON_TEST_VERBOSITY}"
 	}
 	python_execute_function testing
