@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/beautifulsoup
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/ChangeLog,v 1.62 2012/04/21 22:17:45 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/beautifulsoup/ChangeLog,v 1.63 2012/04/22 18:20:38 floppym Exp $
+
+  22 Apr 2012; Mike Gilbert <floppym@gentoo.org> beautifulsoup-4.0.4.ebuild:
+  Add dep on dev-python/lxml for tests. Remove reference to ${S}.
 
   21 Apr 2012; Mike Gilbert <floppym@gentoo.org> beautifulsoup-4.0.4.ebuild:
   Simplify docs building.
